XaC/4-tkn-ee-build/5-pipeline/7-el-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: ansible-ee-el
  name: ansible-ee-el
  namespace: ansible-ee-build
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-ansible-ee-el
    weight: 100
  wildcardPolicy: None
